[FIX] web: status bar buttons dropdown on mobile
On smaller screens, `.o_status_bar_buttons` are displayed in a dropdown.
This commits reset the styles of these buttons when they are displayed
in the dropdown, so they look like regular dropdown items

task-3414462
part of task-3326263

closes odoo/odoo#127622

--- a/addons/web/static/src/views/form/status_bar_buttons/status_bar_buttons.scss
+++ b/addons/web/static/src/views/form/status_bar_buttons/status_bar_buttons.scss
@@ -1,9 +1,4 @@
-
-.o_statusbar_button_dropdown_item {
-    padding: 0;
-    margin-bottom: 3px;
-
-    button {
-        width: 100%;
-    }
+// Unstyle buttons so they behave like regular dropdown-item
+.o_statusbar_button_dropdown_item button, .o_statusbar_button_dropdown_item button:hover {
+    all: unset;
 }
